Most of auth implemented

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=FacebookGuru
+APP_NAME=facebookGuru
 APP_ENV=local
 APP_KEY=base64:gG+8w1JZ8arcaD6WKzVLSe/EVXqGIX8NClKuiRr4Iu0=
 APP_DEBUG=true
